<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ShoppingItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/title_margin"
    android:layout_marginTop="@dimen/title_margin">

    <ImageView
        android:id="@+id/ItemImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/title_margin"
        android:layout_marginStart="@dimen/title_margin"
        android:layout_toEndOf="@+id/ItemImage"
        android:layout_toRightOf="@+id/ItemImage"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ItemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_margin"
            android:layout_marginTop="@dimen/title_margin"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/ItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</RelativeLayout>