<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elmeniawy.eslam.shoppingcartsample.DetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/InCart">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ItemTitle"
                    style="@style/TitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/item_title" />

                <RatingBar
                    android:id="@+id/ItemRating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ItemTitle"
                    android:isIndicator="true"
                    android:rating="3" />

                <TextView
                    android:id="@+id/ItemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/ItemTitle"
                    android:text="@string/item_price"
                    android:textColor="@color/colorAccent" />

                <ImageView
                    android:id="@+id/ItemImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ItemRating"
                    android:layout_marginBottom="@dimen/title_margin"
                    android:layout_marginTop="@dimen/title_margin"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ItemImage"
                    android:layout_marginBottom="@dimen/title_margin"
                    android:text="@string/details"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ItemDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text" />
            </RelativeLayout>
        </ScrollView>

        <TextView
            android:id="@+id/InCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/quantityLayout"
            android:text="@string/in_cart"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/quantityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/quantity" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/text2"
                android:layout_toLeftOf="@+id/AddToCart"
                android:layout_toRightOf="@+id/text2"
                android:layout_toStartOf="@+id/AddToCart"
                android:inputType="number"
                android:text="1" />

            <Button
                android:id="@+id/AddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/add" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
